# compression

./: .env.example  .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
configs/: reasoner.yaml  reasoner_dpo_v1.yaml  reasoner_dpo_v2.yaml  reasoner_rl_v1.yaml  reasoner_rl_v3.yaml  reasoner_sft.yaml  reasoner_sft_phase0_essay.yaml  reasoner_sft_phase0_form.yaml  reasoner_sft_v2.yaml  translator.yaml
docs/: dpo-stage1-design-2026-05-22.md  english-baseline-design-2026-05-24.md  form-diverse-retrain-design-2026-05-24.md  handoff-2026-05-25.md  index.html  mindrouter-structured-outputs-2026-05-13.md  mindrouter-usage-notes-2026-04-16.md  next-session-pickup.md  paper-draft-2026-05-23.md  paper-draft-2026-05-24.md  paper-draft.md  precursor-result-2026-05-24.md  rcds-presentation-2026-05-11.html  rl-design-2026-05-18.md  rl-v3-results-2026-05-22.md  sft-v2-design-2026-05-18.md  small-model-cot-literature-2026-04-22.md  translator-training.md
eval/: RERUN_PATCHED_COUNTEREXAMPLES.md  aggregate_ab.py  aggregate_corpus_audit.py  aggregate_dpo_milestone.py  aggregate_judge_scores.py  aggregate_precursor.py  aggregate_rl_milestone.py  aggregate_target_probe.py  aggregate_translator_judge_scores.py  aggregate_v2_milestone.py  analyze.py  analyze_new_runs.py  blind_corpus_audit_batches.py  build_comparison_md.py  build_report.py  build_report_html.py  build_summary_html.py  extract_v2_answer_span.py  judge_manifest.json  judge_manifest_corpus_audit.json  judge_manifest_target_probe.json  judge_manifest_translator.json  judge_manifest_v2.json  metrics.py  parse_v2_answer.py  (+28 more)
(+486 files in other folders)
