[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "compression"
version = "0.1.0"
description = "Expressive adequacy of Up Goer Five vocabulary for philosophical reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "tokenizers>=0.19",
    "datasets>=2.18",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
corpus = [
    "aiohttp>=3.9",
    "openai>=1.12",
]
eval = [
    "bert-score>=0.3.13",
    "sentence-transformers>=2.6",
    "scipy>=1.12",
]
dev = [
    "pytest>=8.0",
    "wandb>=0.16",
    "tensorboard>=2.16",
    "accelerate>=0.28",
]
all = ["compression[corpus,eval,dev]"]

[tool.setuptools.packages.find]
include = ["wordlist*", "tokenizer*", "corpus*", "translator*", "reasoner*", "eval*"]
